--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
     .bg{
       position:absolute;inset:0;
-      background:url("TON_IMAGE_ICI") center/cover no-repeat;
+      background:url("https://i.imgur.com/COP3Oec.jpeg") center/cover no-repeat;
     }
     .wrap{position:absolute;inset:0;padding:18px;display:flex;flex-direction:column;gap:14px}
     .title{font-weight:700;font-size:18px;text-shadow:0 2px 8px rgba(0,0,0,.35)}
@@ -45,7 +45,7 @@
         <span class="tg-icon">
           <svg viewBox="0 0 24 24" width="16" height="16" fill="#fff"><path d="M22 3.01a1.5 1.5 0 0 0-1.55-.24L2.95 10.53c-1.63.67-1.55 3 .14 3.54l4.86 1.53 1.77 5.62c.49 1.55 2.46 1.91 3.45.58l2.9-3.83 4.72 3.44c1.14.83 2.74.2 3.06-1.2l3.05-13.44A1.5 1.5 0 0 0 22 3.01z" transform="translate(-2.5 -2.5) scale(0.83)"/></svg>
         </span>
-        <span class="cta-label">Canal telegram</span>
+        <span class="cta-label">Canal telegram 🔞</span>
       </a>
     </div>
   </main>
