--- a/index.html
+++ b/index.html
@@ -24,13 +24,17 @@
     }
     .bg{
       position:absolute;inset:0;
-      background:url("https://i.imgur.com/fbM6klW.jpg") center/cover no-repeat;
+      background:url("https://i.imgur.com/fbM6klW.jpeg") center/cover no-repeat;
+      filter: blur(2px) brightness(0.7);
+      transform: scale(1.05);
+      z-index:0;
     }
     .wrap{position:absolute;inset:0;padding:18px;display:flex;flex-direction:column;gap:14px;z-index:1}
-    .title{font-weight:700;font-size:18px;text-shadow:0 2px 8px rgba(0,0,0,.35)}
+    .title{font-weight:700;font-size:18px;text-shadow:0 2px 8px rgba(0,0,0,.6)}
     .cta{
       display:flex;align-items:center;gap:10px;padding:14px 16px;border-radius:12px;text-decoration:none;color:#fff;font-weight:600;
-      background:rgba(13,17,23,.75);
+      background:rgba(13,17,23,.85);
+      backdrop-filter: blur(4px);
     }
     .tg-icon{width:26px;height:26px;flex:0 0 26px;border-radius:50%;display:grid;place-items:center;background:var(--accent)}
     .cta-label{flex:1;text-align:center;font-size:15px}
@@ -45,7 +49,7 @@
         <span class="tg-icon">
           <svg viewBox="0 0 24 24" width="16" height="16" fill="#fff"><path d="M22 3.01a1.5 1.5 0 0 0-1.55-.24L2.95 10.53c-1.63.67-1.55 3 .14 3.54l4.86 1.53 1.77 5.62c.49 1.55 2.46 1.91 3.45.58l2.9-3.83 4.72 3.44c1.14.83 2.74.2 3.06-1.2l3.05-13.44A1.5 1.5 0 0 0 22 3.01z" transform="translate(-2.5 -2.5) scale(0.83)"/></svg>
         </span>
-        <span class="cta-label">Canal telegram🔞</span>
+        <span class="cta-label">Canal telegram</span>
       </a>
     </div>
   </main>
