--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
     }
     .bg{
       position:absolute;inset:0;
-      background:url("https://i.imgur.com/fbM6klW.jpeg") center/cover no-repeat;
-      filter: blur(2px) brightness(0.7);
-      transform: scale(1.05);
+      background:url("https://i.imgur.com/fbM6klW.jpg") center/cover no-repeat;
       z-index:0;
     }
     .wrap{position:absolute;inset:0;padding:18px;display:flex;flex-direction:column;gap:14px;z-index:1}
