--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     html,body{height:100%;margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;color:var(--fg);background:var(--bg);display:grid;place-items:center}
     .phone{
       width:min(420px,94vw);
-      aspect-ratio:9/16;
+      /* Hauteur calculée pour ratio mobile 9:16 */
+      height:calc(min(420px, 94vw) * 16 / 9);
       border-radius:28px;
       overflow:hidden;
       background:#111;
@@ -24,7 +25,7 @@
     }
     .bg{
       position:absolute;inset:0;
-      background:url("https://i.imgur.com/fbM6klW.jpg") center/contain no-repeat;
+      background:url("https://i.imgur.com/ID33ere.png") center/cover no-repeat;
       z-index:0;
     }
     .wrap{position:absolute;inset:0;padding:18px;display:flex;flex-direction:column;gap:14px;z-index:1}
