--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     }
     .bg{
       position:absolute;inset:0;
-      background:url("https://i.imgur.com/ID33ere.png") center/cover no-repeat;
+      background:url("https://i.imgur.com/ZTSBS5E.png") center/cover no-repeat;
       z-index:0;
     }
     .wrap{position:absolute;inset:0;padding:18px;display:flex;flex-direction:column;gap:14px;z-index:1}
