--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     html,body{height:100%;margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;color:var(--fg);background:var(--bg);display:grid;place-items:center}
     .phone{
       width:min(420px,94vw);
-      /* Hauteur calculée pour ratio mobile 9:16 */
       height:calc(min(420px, 94vw) * 16 / 9);
       border-radius:28px;
       overflow:hidden;
@@ -37,6 +36,16 @@
     }
     .tg-icon{width:26px;height:26px;flex:0 0 26px;border-radius:50%;display:grid;place-items:center;background:var(--accent)}
     .cta-label{flex:1;text-align:center;font-size:15px}
+    .countdown{
+      margin-top:10px;
+      text-align:center;
+      font-size:16px;
+      font-weight:bold;
+      background:rgba(0,0,0,0.6);
+      padding:8px 12px;
+      border-radius:8px;
+      backdrop-filter: blur(4px);
+    }
   </style>
 </head>
 <body>
@@ -48,9 +57,36 @@
         <span class="tg-icon">
           <svg viewBox="0 0 24 24" width="16" height="16" fill="#fff"><path d="M22 3.01a1.5 1.5 0 0 0-1.55-.24L2.95 10.53c-1.63.67-1.55 3 .14 3.54l4.86 1.53 1.77 5.62c.49 1.55 2.46 1.91 3.45.58l2.9-3.83 4.72 3.44c1.14.83 2.74.2 3.06-1.2l3.05-13.44A1.5 1.5 0 0 0 22 3.01z" transform="translate(-2.5 -2.5) scale(0.83)"/></svg>
         </span>
-        <span class="cta-label">Canal telegram</span>
+        <span class="cta-label">Canal telegram🔞</span>
       </a>
+      <div id="countdown" class="countdown">🚨Offre valable encore : 01:00:00</div>
     </div>
   </main>
+  <script>
+    function startCountdown(duration) {
+      let timer = duration, hours, minutes, seconds;
+      const countdownEl = document.getElementById('countdown');
+      setInterval(function () {
+        hours = parseInt(timer / 3600, 10);
+        minutes = parseInt((timer % 3600) / 60, 10);
+        seconds = parseInt(timer % 60, 10);
+
+        hours = hours < 10 ? "0" + hours : hours;
+        minutes = minutes < 10 ? "0" + minutes : minutes;
+        seconds = seconds < 10 ? "0" + seconds : seconds;
+
+        countdownEl.textContent = "Offre valable encore : " + hours + ":" + minutes + ":" + seconds;
+
+        if (--timer < 0) {
+          timer = duration; // redémarre le compte à rebours
+        }
+      }, 1000);
+    }
+
+    // Lance un compte à rebours d'1h (3600 secondes)
+    window.onload = function () {
+      startCountdown(3600);
+    };
+  </script>
 </body>
 </html>
