--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <span class="tg-icon">
           <svg viewBox="0 0 24 24" width="16" height="16" fill="#fff"><path d="M22 3.01a1.5 1.5 0 0 0-1.55-.24L2.95 10.53c-1.63.67-1.55 3 .14 3.54l4.86 1.53 1.77 5.62c.49 1.55 2.46 1.91 3.45.58l2.9-3.83 4.72 3.44c1.14.83 2.74.2 3.06-1.2l3.05-13.44A1.5 1.5 0 0 0 22 3.01z" transform="translate(-2.5 -2.5) scale(0.83)"/></svg>
         </span>
-        <span class="cta-label">Canal telegram 🔞</span>
+        <span class="cta-label">Canal privé telegram 🔞</span>
       </a>
-      <div id="countdown" class="countdown">🚨Offre valable encore : 01:00:00</div>
+      <div id="countdown" class="countdown">🚨 Offre valable encore : 01:00:00</div>
     </div>
   </main>
   <script>
