--- a/index.html
+++ b/index.html
@@ -33,18 +33,25 @@
       display:flex;align-items:center;gap:10px;padding:14px 16px;border-radius:12px;text-decoration:none;color:#fff;font-weight:600;
       background:rgba(13,17,23,.85);
       backdrop-filter: blur(4px);
+      animation: pulse 1s infinite;
     }
     .tg-icon{width:26px;height:26px;flex:0 0 26px;border-radius:50%;display:grid;place-items:center;background:var(--accent)}
     .cta-label{flex:1;text-align:center;font-size:15px}
     .countdown{
       margin-top:10px;
       text-align:center;
-      font-size:16px;
+      font-size:18px;
       font-weight:bold;
-      background:rgba(0,0,0,0.6);
+      color:#ff4444;
+      background:rgba(0,0,0,0.7);
       padding:8px 12px;
       border-radius:8px;
       backdrop-filter: blur(4px);
+    }
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
     }
   </style>
 </head>
