--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </span>
         <span class="cta-label">Canal privé telegram 🔞</span>
       </a>
-      <div id="countdown" class="countdown">🚨 Offre valable encore : 01:00:00</div>
+      <div id="countdown" class="countdown">🚨 Offre valable encore : 00:00:20</div>
     </div>
   </main>
   <script>
@@ -90,9 +90,9 @@
       }, 1000);
     }
 
-    // Lance un compte à rebours d'1h (3600 secondes)
+    // Lance un compte à rebours de 20 secondes
     window.onload = function () {
-      startCountdown(3600);
+      startCountdown(20);
     };
   </script>
 </body>
