--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Accès privé – Telegram</title>
-  <meta name="description" content="Rejoins mon Telegram maintenant." />
+  <meta name="description" content="⌛Seulement 20s pour rejoindre le canal privé..." />
   <style>
     :root{
       --bg:#0b0b0f;
@@ -59,7 +59,7 @@
   <main class="phone">
     <div class="bg"></div>
     <div class="wrap">
-      <h1 class="title">Rejoins mon telegram maintenant 🔽</h1>
+      <h1 class="title">⌛Seulement 20s pour rejoindre le canal privé...</h1>
       <a class="cta" href="https://t.me/+sWr2TbeyHSIwZTE8" target="_blank" rel="noopener">
         <span class="tg-icon">
           <svg viewBox="0 0 24 24" width="16" height="16" fill="#fff"><path d="M22 3.01a1.5 1.5 0 0 0-1.55-.24L2.95 10.53c-1.63.67-1.55 3 .14 3.54l4.86 1.53 1.77 5.62c.49 1.55 2.46 1.91 3.45.58l2.9-3.83 4.72 3.44c1.14.83 2.74.2 3.06-1.2l3.05-13.44A1.5 1.5 0 0 0 22 3.01z" transform="translate(-2.5 -2.5) scale(0.83)"/></svg>
