--- a/index.html
+++ b/index.html
@@ -6,53 +6,18 @@
   <title>Accès privé – Telegram</title>
   <meta name="description" content="⌛Seulement 20s pour rejoindre le canal privé..." />
   <style>
-    :root{
-      --bg:#0b0b0f;
-      --fg:#eaeaf0;
-      --btn:#1f2937;
-      --accent:#2aabee;
-    }
+    :root{ --bg:#0b0b0f; --fg:#eaeaf0; --btn:#1f2937; --accent:#2aabee; }
     *{box-sizing:border-box}
     html,body{height:100%;margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;color:var(--fg);background:var(--bg);display:grid;place-items:center}
-    .phone{
-      width:min(420px,94vw);
-      height:calc(min(420px, 94vw) * 16 / 9);
-      border-radius:28px;
-      overflow:hidden;
-      background:#111;
-      position:relative;
-    }
-    .bg{
-      position:absolute;inset:0;
-      background:url("https://i.imgur.com/ZTSBS5E.png") center/cover no-repeat;
-      z-index:0;
-    }
-    .wrap{position:absolute;inset:0;padding:18px;display:flex;flex-direction:column;gap:14px;z-index:1}
-    .title{font-weight:700;font-size:18px;text-shadow:0 2px 8px rgba(0,0,0,.6)}
-    .cta{
-      display:flex;align-items:center;gap:10px;padding:14px 16px;border-radius:12px;text-decoration:none;color:#fff;font-weight:600;
-      background:rgba(13,17,23,.85);
-      backdrop-filter: blur(4px);
-      animation: pulse 1s infinite;
-    }
-    .tg-icon{width:26px;height:26px;flex:0 0 26px;border-radius:50%;display:grid;place-items:center;background:var(--accent)}
-    .cta-label{flex:1;text-align:center;font-size:15px}
-    .countdown{
-      margin-top:10px;
-      text-align:center;
-      font-size:18px;
-      font-weight:bold;
-      color:#ff4444;
-      background:rgba(0,0,0,0.7);
-      padding:8px 12px;
-      border-radius:8px;
-      backdrop-filter: blur(4px);
-    }
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.05); }
-      100% { transform: scale(1); }
-    }
+    .phone{ width:min(420px,94vw); height:calc(min(420px, 94vw) * 16 / 9); border-radius:28px; overflow:hidden; background:#111; position:relative; }
+    .bg{ position:absolute; inset:0; background:url("https://i.imgur.com/ZTSBS5E.png") center/cover no-repeat; z-index:0; }
+    .wrap{ position:absolute; inset:0; padding:18px; display:flex; flex-direction:column; gap:14px; z-index:1 }
+    .title{ font-weight:700; font-size:18px; text-shadow:0 2px 8px rgba(0,0,0,.6) }
+    .cta{ display:flex; align-items:center; gap:10px; padding:14px 16px; border-radius:12px; text-decoration:none; color:#fff; font-weight:600; background:rgba(13,17,23,.85); backdrop-filter:blur(4px); animation:pulse 1s infinite; }
+    .tg-icon{ width:26px; height:26px; flex:0 0 26px; border-radius:50%; display:grid; place-items:center; background:var(--accent) }
+    .cta-label{ flex:1; text-align:center; font-size:15px }
+    .countdown{ margin-top:10px; text-align:center; font-size:18px; font-weight:bold; color:#ff4444; background:rgba(0,0,0,0.7); padding:8px 12px; border-radius:8px; backdrop-filter:blur(4px) }
+    @keyframes pulse{ 0%{transform:scale(1)} 50%{transform:scale(1.05)} 100%{transform:scale(1)} }
   </style>
 </head>
 <body>
@@ -69,54 +34,71 @@
       <div id="countdown" class="countdown">🚨 Offre valable encore : 00:00:20</div>
     </div>
   </main>
+
   <script>
-    const ENDPOINT = "https://script.google.com/macros/s/AKfycbxkqkPUuKgEnv93ftcA675JKFgwDy19ZDvzfUFAOyiNUewkobYaISVM5DLgLOD8b8bnvw/exec"; // Remplace par ton URL /exec
-    const TG_YT = "https://t.me/+jg0Q-m7DMcozOGQ0"; // Remplace par ton lien Telegram YouTube
+    // ====== CONFIG (mets tes valeurs) ======
+    const ENDPOINT = "https://script.google.com/macros/s/AKfycbxkqkPUuKgEnv93ftcA675JKFgwDy19ZDvzfUFAOyiNUewkobYaISVM5DLgLOD8b8bnvw/exec"; // URL /exec Apps Script
+    const TG_YT    = "https://t.me/+jg0Q-m7DMcozOGQ0"; // Lien Telegram YouTube
+    // =======================================
 
+    // Debug helper
+    function log(){ try{ console.log.apply(console, arguments);}catch(_){} }
+
+    // Précharge IP (best effort, non bloquant)
     let clientIp = "unknown";
-    fetch("https://api.ipify.org?format=json").then(r=>r.json()).then(j=>{ clientIp = j.ip || "unknown"; }).catch(()=>{});
+    try{
+      fetch("https://api.ipify.org?format=json", {cache:'no-store'})
+        .then(r=>r.json()).then(j=>{ clientIp = j && j.ip ? j.ip : "unknown"; log('[IP]', clientIp); })
+        .catch(err=>log('[IP ERR]', err));
+    }catch(err){ log('[IP EXC]', err); }
 
-    document.querySelector('.cta').addEventListener('click', function(e) {
-      e.preventDefault();
-      const payload = {
-        source: 'yt',
-        page: location.href,
-        user_agent: navigator.userAgent,
-        referrer: document.referrer,
-        ip: clientIp
-      };
-      const blob = new Blob([JSON.stringify(payload)], {type:'application/json'});
-      if (navigator.sendBeacon) {
-        navigator.sendBeacon(ENDPOINT, blob);
-      } else {
-        fetch(ENDPOINT, {method:'POST', body: JSON.stringify(payload), headers:{'Content-Type':'application/json'}, keepalive:true});
-      }
-      location.replace(TG_YT);
+    // Attache le tracking + redirection
+    document.addEventListener('DOMContentLoaded', () => {
+      const cta = document.querySelector('a.cta');
+      if(!cta) return;
+      cta.href = TG_YT; // lien de secours si JS désactivé
+      cta.addEventListener('click', (e)=>{
+        e.preventDefault();
+        const payload = {
+          source: 'yt',
+          page: location.href,
+          user_agent: navigator.userAgent || '',
+          referrer: document.referrer || '',
+          ip: clientIp
+        };
+        log('[TRACK PAYLOAD]', payload);
+
+        try{
+          const blob = new Blob([JSON.stringify(payload)], {type:'application/json'});
+          let sent = false;
+          if(navigator.sendBeacon){
+            sent = navigator.sendBeacon(ENDPOINT, blob);
+            log('[sendBeacon]', sent);
+          }
+          if(!sent){
+            // Fallback ultra-rapide
+            fetch(ENDPOINT, {method:'POST', body: JSON.stringify(payload), headers:{'Content-Type':'application/json'}, keepalive:true, mode:'no-cors'})
+              .then(()=>log('[fetch keepalive] sent'))
+              .catch(err=>log('[fetch keepalive] err', err));
+          }
+        }catch(err){ log('[TRACK ERR]', err); }
+
+        // Petit délai pour laisser partir le beacon (fiable sur navigateurs in-app)
+        setTimeout(()=>{ location.replace(TG_YT); }, 160);
+      });
     });
 
-    function startCountdown(duration) {
-      let timer = duration, hours, minutes, seconds;
-      const countdownEl = document.getElementById('countdown');
-      setInterval(function () {
-        hours = parseInt(timer / 3600, 10);
-        minutes = parseInt((timer % 3600) / 60, 10);
-        seconds = parseInt(timer % 60, 10);
-
-        hours = hours < 10 ? "0" + hours : hours;
-        minutes = minutes < 10 ? "0" + minutes : minutes;
-        seconds = seconds < 10 ? "0" + seconds : seconds;
-
-        countdownEl.textContent = "🚨 Offre valable encore : " + hours + ":" + minutes + ":" + seconds;
-
-        if (--timer < 0) {
-          timer = duration;
-        }
+    // Compte à rebours 20s
+    function startCountdown(duration){
+      let timer = duration, h,m,s; const el = document.getElementById('countdown');
+      setInterval(()=>{
+        h = (timer/3600)|0; m = ((timer%3600)/60)|0; s = (timer%60)|0;
+        const pad = n => (n<10? '0'+n : n);
+        el.textContent = `🚨 Offre valable encore : ${pad(h)}:${pad(m)}:${pad(s)}`;
+        if(--timer < 0) timer = duration; // redémarre
       }, 1000);
     }
-
-    window.onload = function () {
-      startCountdown(20);
-    };
+    window.onload = ()=> startCountdown(20);
   </script>
 </body>
 </html>
