--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <script>
     // ====== CONFIG (mets tes valeurs) ======
     const ENDPOINT = "https://script.google.com/macros/s/AKfycbxkqkPUuKgEnv93ftcA675JKFgwDy19ZDvzfUFAOyiNUewkobYaISVM5DLgLOD8b8bnvw/exec"; // URL /exec Apps Script
-    const TG_YT    = "https://t.me/+jg0Q-m7DMcozOGQ0"; // Lien Telegram YouTube
+    const TG_YT    = "https://bit.ly/jessie_prive"; // Lien Telegram YouTube
     // =======================================
 
     // Debug helper
