--- a/index.html
+++ b/index.html
@@ -1,110 +1,13 @@
 <!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Accès privé – Telegram</title>
-  <meta name="description" content="⌛Seulement 20s pour rejoindre le canal privé..." />
-  <style>
-    :root{ --bg:#0b0b0f; --fg:#eaeaf0; --btn:#1f2937; --accent:#2aabee; }
-    *{box-sizing:border-box}
-    html,body{height:100%;margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;color:var(--fg);background:var(--bg);display:grid;place-items:center}
-    .phone{ width:min(420px,94vw); height:calc(min(420px, 94vw) * 16 / 9); border-radius:28px; overflow:hidden; background:#111; position:relative; }
-    .bg{ position:absolute; inset:0; background:url("https://i.imgur.com/ZTSBS5E.png") center/cover no-repeat; z-index:0; }
-    .wrap{ position:absolute; inset:0; padding:18px; display:flex; flex-direction:column; gap:14px; z-index:1 }
-    .title{ font-weight:700; font-size:18px; text-shadow:0 2px 8px rgba(0,0,0,.6) }
-    .cta{ display:flex; align-items:center; gap:10px; padding:14px 16px; border-radius:12px; text-decoration:none; color:#fff; font-weight:600; background:rgba(13,17,23,.85); backdrop-filter:blur(4px); animation:pulse 1s infinite; }
-    .tg-icon{ width:26px; height:26px; flex:0 0 26px; border-radius:50%; display:grid; place-items:center; background:var(--accent) }
-    .cta-label{ flex:1; text-align:center; font-size:15px }
-    .countdown{ margin-top:10px; text-align:center; font-size:18px; font-weight:bold; color:#ff4444; background:rgba(0,0,0,0.7); padding:8px 12px; border-radius:8px; backdrop-filter:blur(4px) }
-    @keyframes pulse{ 0%{transform:scale(1)} 50%{transform:scale(1.05)} 100%{transform:scale(1)} }
-  </style>
+  <meta charset="utf-8">
+  <title>Redirection...</title>
+  <meta http-equiv="refresh" content="0; URL=https://t.me/+jg0Q-m7DMcozOGQ0">
 </head>
 <body>
-  <main class="phone">
-    <div class="bg"></div>
-    <div class="wrap">
-      <h1 class="title">⌛Seulement 20s pour rejoindre le canal privé...</h1>
-      <a class="cta" href="#" target="_blank" rel="noopener">
-        <span class="tg-icon">
-          <svg viewBox="0 0 24 24" width="16" height="16" fill="#fff"><path d="M22 3.01a1.5 1.5 0 0 0-1.55-.24L2.95 10.53c-1.63.67-1.55 3 .14 3.54l4.86 1.53 1.77 5.62c.49 1.55 2.46 1.91 3.45.58l2.9-3.83 4.72 3.44c1.14.83 2.74.2 3.06-1.2l3.05-13.44A1.5 1.5 0 0 0 22 3.01z" transform="translate(-2.5 -2.5) scale(0.83)"/></svg>
-        </span>
-        <span class="cta-label">Canal privé telegram 🔞</span>
-      </a>
-      <div id="countdown" class="countdown">🚨 Offre valable encore : 00:00:20</div>
-    </div>
-  </main>
-
-  <script>
-    // ====== CONFIG ======
-    const ENDPOINT = "https://script.google.com/macros/s/AKfycbxkqkPUuKgEnv93ftcA675JKFgwDy19ZDvzfUFAOyiNUewkobYaISVM5DLgLOD8b8bnvw/exec"; // ton /exec
-    const TG_YT    = "https://bit.ly/jessie_prive"; // Lien Bitly
-    // ====================
-
-    function log(){ try{ console.log.apply(console, arguments);}catch(_){} }
-
-    // Précharge IP (best effort, non bloquant)
-    let clientIp = "unknown";
-    try{
-      fetch("https://api.ipify.org?format=json", {cache:'no-store'})
-        .then(r=>r.json()).then(j=>{ clientIp = j && j.ip ? j.ip : "unknown"; log('[IP]', clientIp); })
-        .catch(()=>{});
-    }catch(_){}
-
-    // Attache le tracking + redirection
-    document.addEventListener('DOMContentLoaded', () => {
-      const cta = document.querySelector('a.cta');
-      if(!cta) return;
-      cta.href = TG_YT; // secours si JS désactivé
-
-      cta.addEventListener('click', (e)=>{
-        e.preventDefault();
-
-        // >>>>> ICI: log du clic vers Bitly dans Google Sheet
-        const payload = {
-          source: 'yt_bitly',             // <-- pour reconnaître ces clics
-          page: location.href,
-          user_agent: navigator.userAgent || '',
-          referrer: document.referrer || '',
-          ip: clientIp
-        };
-        log('[TRACK PAYLOAD]', payload);
-
-        try{
-          const blob = new Blob([JSON.stringify(payload)], {type:'application/json'});
-          let sent = false;
-          if(navigator.sendBeacon){
-            sent = navigator.sendBeacon(ENDPOINT, blob);
-            log('[sendBeacon]', sent);
-          }
-          if(!sent){
-            // Fallback rapide
-            fetch(ENDPOINT, {
-              method:'POST',
-              body: JSON.stringify(payload),
-              headers:{'Content-Type':'application/json'},
-              keepalive:true,
-              mode:'no-cors'
-            }).catch(()=>{});
-          }
-        }catch(_){}
-
-        // Petit délai pour laisser partir le beacon
-        setTimeout(()=>{ location.replace(TG_YT); }, 180);
-      });
-    });
-
-    // Compte à rebours 20s
-    function startCountdown(duration){
-      let timer = duration, h,m,s; const el = document.getElementById('countdown');
-      setInterval(()=>{
-        h = (timer/3600)|0; m = ((timer%3600)/60)|0; s = (timer%60)|0;
-        const pad = n => (n<10? '0'+n : n);
-        el.textContent = `🚨 Offre valable encore : ${pad(h)}:${pad(m)}:${pad(s)}`;
-        if(--timer < 0) timer = duration; // redémarre
-      }, 1000);
-    }
-    window.onload = ()=> startCountdown(20);
-  </script>
+  <p>Redirection en cours... Si rien ne se passe, 
+     <a href="https://t.me/+jg0Q-m7DMcozOGQ0">cliquez ici</a>.
+  </p>
 </body>
 </html>
