--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Redirection...</title>
-  <meta http-equiv="refresh" content="0; URL=https://t.me/+jg0Q-m7DMcozOGQ0">
+  <meta http-equiv="refresh" content="0; URL=https://t.me/+YOO3o5nl_fIyNjI0">
 </head>
 <body>
   <p>Redirection en cours... Si rien ne se passe, 
-     <a href="https://t.me/+jg0Q-m7DMcozOGQ0">cliquez ici</a>.
+     <a href="https://t.me/+YOO3o5nl_fIyNjI0">cliquez ici</a>.
   </p>
 </body>
 </html>
